# login_with_haravan

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  DEPLOYMENT.md  MANIFEST.in  README.md  package.json  pyproject.toml  requirements.txt  rewrite_kb.py  scratch.js  setup.py  ship.sh  test_gate.sh  test_out.txt
.cm/: CONTINUITY.md
.github/workflows/: test-gate.yml
.jules/: sentinel.md
backups/haravandesk_hd_ticket_form_20260430_075916/: backup.json  summary.json
docs/: AGENT_HANDOFF.md  CONFIGURATION.md  NEXT_STEPS_FOR_AGENT.md  OAUTH_FLOW.md  SITE_CONFIG_HANDOFF.md  TROUBLESHOOTING.md  bitrix_integration.md  bitrix_mapping.md  bitrix_mcp_setup.md  data-flow.md  database.md  deployment.md  frappe-helpdesk-plan.md  haravan-helpdesk-data-model.md  index.md  package-lock.json  package.json
docs/.vitepress/: config.mts
docs/about/: handoff-roadmap.md  plan.md
docs/access-control/: customer-permissions.md  rbac.md
docs/api/: customer-profile.md  identity.md  (+5 more)
login_with_haravan/: customer_profile.py  diagnostics.py  hooks.py  login_email.py  modules.txt  oauth.py  patches.txt  ticket_context.py
openspec/: AGENT_HANDOFF.md  AGENT_NEXT_STEPS.md  SITE_CONFIG.md  project.md
scripts/: deploy_bitrix_metajson_enrichment.py  deploy_profile_ticket_routing.py  fix_ai_analyze_button.py  fix_ai_assist_and_analyze_comment.py  hide_customer_portal_internal_ticket_fields.py  patch_customer_profile_bitrix_fields.py  patch_customer_profile_tabs.py  patch_gitlab_product_suggestion_labels.py  patch_helpdesk_integrations_bitrix_settings.py  patch_profile_sync_company_id.py
(+132 files in other folders)
