[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "login_with_haravan"
version = "0.1.12"
description = "Frappe x Haravan Single Sign On Module for Frappe Helpdesk"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Frappe x Haravan" }]
license = "MIT"
dependencies = [
    "requests>=2.31.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["login_with_haravan*"]
